# trendfit

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
app/: cockpit_app.py
deploy/: README.md  com.trendfit.dashboard.plist  com.trendfit.serve.plist
docs/: BOOKS_LIBRARY.md  BUFFETT_JR.md  BUFFETT_JR_AGENT.md  COCKPIT.md  FRONTEND.md  MARKET_CONE.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE5.md  PRD_COCKPIT_UNIFICADO.md  PRD_FUTURE_RADAR.md  REGIME_ANALYSIS.md  SPRINT1.md  SPRINT_BOARD.md  STOCK_VALUATION.md  STRATEGY_COMPARISON.md  VERDICT.md
profiles/: btc.json  btc_macro.json  btc_meanrev.json  btc_v1.json  btc_v2.json  btc_v3.json
radar/: README.md
reference/: REFERENCE_README.md  build_data.py  confluence_wf.py  current_signal.py  optimize2.py  trendfit_btc.py  walkforward.py
scripts/: alert_btc.py  alert_daily.py  allocation_panel.py  chart_live.py  compare_strategies.py  dashboard.py  diagnose_btc.py  improve_strategies.py  run_btc_sprint1.py  serve.py  thesis_tracker.py  validate_antichop.py  validate_elder.py  validate_elder_intraday.py  validate_improved.py  validate_meanrev.py  validate_multiasset.py  validate_phase2.py  validate_phase2_v3.py  validate_phase3.py  validate_ratchet.py  validate_regime_split.py  validate_rsi.py  validate_triple_screen.py  validate_valuation.py  validate_voltarget.py  wisdom_backtest.py
tests/: conftest.py  test_allocation.py  test_backtest.py  test_brain.py  test_brain_server.py  test_buffett_jr.py  test_daily_decision.py  test_data_report.py  test_elder.py  test_external.py  (+8 more)
(+79 files in other folders)
