[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trendfit"
version = "0.1.0"
description = "Sistema de trading multi-ativo por confluência (ensemble trend + veto de regime + walk-forward)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Bruno Liberato Girardi" }]
license = { text = "MIT" }
dependencies = [
    "ccxt>=4.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
include = ["trendfit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
